feat: admin get & add & delete marks with lint
